bodging svg into place

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,13 @@
 /**
  * Syntax highlighting styles
  */
+
+.component__code {
+  pre {
+    white-space: pre-line;
+  }
+}
+
 .highlight {
     background: #fff;
     @extend %vertical-rhythm;
